<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">TestingStuff</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whippedCream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="quantity_number">2</string>
    <string name="plus">+</string>
    <string name="order">order</string>
    <string name="order_subject">Just Java order for <xliff:g example="Amy" id="name">%s</xliff:g></string>
    <string name="order_summary_name">Name: <xliff:g example="Amy" id="name">%s</xliff:g></string>
    <string name="order_cream">Add whipped cream? <xliff:g id="whipped_cream">%b</xliff:g></string>
    <string name="order_chocolate">Add chocolate? <xliff:g id="chocolate">%b</xliff:g></string>
    <string name="order_quantity">Quantity: <xliff:g id="quantity">%d</xliff:g></string>
    <string name="order_total">Total: <xliff:g id="total">%s</xliff:g></string>
    <string name="order_thank_you">Thank you!</string>
    <string name="category_phrases">Phrases</string>
    <string name="category_colors">Colors</string>
    <string name="category_numbers">Numbers</string>
    <string name="category_family">Family Members</string>
    <string name="title_activity_miwok_tabs">MiwokTabs</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="header_event">Event</string>
    <string name="header_date">Date</string>
    <string name="header_tsunami_alert">Tsunami Alert?</string>
    <string name="alert_no">No</string>
    <string name="alert_yes">Yes</string>
    <string name="alert_not_available">Not available</string>
    <string name="perceived_strength">Perceived Strength</string>
    <string name="num_people_felt_it"><xliff:g example="10" id="number">%s</xliff:g> people felt it</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Earthquake Settings</string>
    <string name="settings_min_magnitude_label">Minimum Magnitude</string>
    <string name="settings_min_magnitude_key" translatable="false">min_magnitude</string>
    <string name="settings_min_magnitude_default" translatable="false">6</string>
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_magnitude_value</string>
    <string name="settings_order_by_magnitude_label">Magnitude</string>
    <string name="settings_order_by_magnitude_value" translatable="false">magnitude</string>
    <string name="settings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">time</string>
    <string name="settings_min_quantity_default" translatable="false">10</string>
    <string name="settings_min_quantity_key" translatable="false">min_quantity</string>
    <string name="settings_min_quantity_label">Minimum quantity</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Pets</string>
    <string name="editor_activity_title_new_pet">Add a Pet</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="category_overview">Overview</string>
    <string name="category_gender">Gender</string>
    <string name="category_measurement">Measurement</string>
    <string name="hint_pet_name">Name</string>
    <string name="hint_pet_breed">Breed</string>
    <string name="hint_pet_weight">Weight</string>
    <string name="unit_pet_weight">kg</string>
    <string name="gender_unknown">Unknown</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>
    <string name="empty_view_subtitle_text">Get started by adding a pet</string>
    <string name="editor_activity_title_edit_pet">Edit Pet</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="app_name_Sun">Sunshine</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="format_full_friendly_date">

<xliff:g id="month">%1$s</xliff:g>
,
<xliff:g id="day">%2$s</xliff:g>

</string>
    <string name="format_temperature_celsius">

<xliff:g id="temp">%1.0f</xliff:g>
\u00B0C
</string>
    <string name="format_temperature_fahrenheit">

<xliff:g id="temp">%1.0f</xliff:g>
\u00B0F
</string>
    <string name="format_wind_kmh">

<xliff:g id="speed">%1$1.0f</xliff:g>
km/h
<xliff:g id="direction">%2$s</xliff:g>

</string>
    <string name="format_wind_mph">

<xliff:g id="speed">%1$1.0f</xliff:g>
mph
<xliff:g id="direction">%2$s</xliff:g>

</string>
    <string name="condition_2xx">Storm</string>
    <string name="condition_3xx">Drizzle</string>
    <string name="condition_500">Light Rain</string>
    <string name="condition_501">Moderate Rain</string>
    <string name="condition_502">Heavy Rain</string>
    <string name="condition_503">Intense Rain</string>
    <string name="condition_504">Extreme Rain</string>
    <string name="condition_511">Freezing Rain</string>
    <string name="condition_520">Light Shower</string>
    <string name="condition_521">Shower</string>
    <string name="condition_522">Heavy Shower</string>
    <string name="condition_531">Ragged Shower</string>
    <string name="condition_600">Light Snow</string>
    <string name="condition_601">Snow</string>
    <string name="condition_602">Heavy Snow</string>
    <string name="condition_611">Sleet</string>
    <string name="condition_612">Shower Sleet</string>
    <string name="condition_615">Rain and Snow</string>
    <string name="condition_616">Rain and Snow</string>
    <string name="condition_620">Shower Snow</string>
    <string name="condition_621">Shower Snow</string>
    <string name="condition_622">Shower Snow</string>
    <string name="condition_701">Mist</string>
    <string name="condition_711">Smoke</string>
    <string name="condition_721">Haze</string>
    <string name="condition_731">Sand, Dust</string>
    <string name="condition_741">Fog</string>
    <string name="condition_751">Sand</string>
    <string name="condition_761">Dust</string>
    <string name="condition_762">Volcanic Ash</string>
    <string name="condition_771">Squalls</string>
    <string name="condition_781">Tornado</string>
    <string name="condition_800">Clear</string>
    <string name="condition_801">Mostly Clear</string>
    <string name="condition_802">Scattered Clouds</string>
    <string name="condition_803">Broken Clouds</string>
    <string name="condition_804">Overcast Clouds</string>
    <string name="condition_900">Tornado</string>
    <string name="condition_901">Tropical Storm</string>
    <string name="condition_902">Hurricane</string>
    <string name="condition_903">Cold</string>
    <string name="condition_904">Hot</string>
    <string name="condition_905">Windy</string>
    <string name="condition_906">Hail</string>
    <string name="condition_951">Calm</string>
    <string name="condition_952">Light Breeze</string>
    <string name="condition_953">Gentle Breeze</string>
    <string name="condition_954">Breeze</string>
    <string name="condition_955">Fresh Breeze</string>
    <string name="condition_956">Strong Breeze</string>
    <string name="condition_957">High Wind</string>
    <string name="condition_958">Gale</string>
    <string name="condition_959">Severe Gale</string>
    <string name="condition_960">Storm</string>
    <string name="condition_961">Violent Storm</string>
    <string name="condition_962">Hurricane</string>
    <string name="condition_unknown">
Unknown (
<xliff:g id="conditionId">%1$d</xliff:g>
)
</string>
    <string name="search">Search</string>
    <string name="error_search">Error has occurred</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_reset">Reset</string>
</resources>