<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <TextView
            android:padding="8dp"
            android:text="@string/toppings"
            style="@style/HeaderTextStyle"
            />

        <CheckBox
            android:id="@+id/creamCbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:text="@string/whippedCream"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/chocolatCbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:text="@string/chocolate"
            android:textSize="16sp" />

        <TextView
            android:padding="8dp"
            android:text="@string/quantity"
            style="@style/HeaderTextStyle"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/decrementBtn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:text="@string/minus" />

            <TextView
                android:id="@+id/quantityTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/quantity_number"
                android:textColor="@android:color/black"
                android:textSize="16sp" />


            <Button
                android:id="@+id/incrementBtn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="@string/plus" />

        </LinearLayout>

        <Button
            android:id="@+id/orderBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitOrder"
            android:padding="8dp"
            android:text="@string/order"
            android:textAllCaps="true" />
    </LinearLayout>
</ScrollView>

